# gestlib

./: CMakeLists.txt  LICENSE  README.md
examples/: main.cpp
include/gestlib/: GestLib.h  GestureRecognizer.h  Gestures.h  OneFingerFSM.h  TouchDriver.h  defines.h
src/: GestureRecognizer.cpp  OneFingerFSM.cpp  TouchDriver.cpp
